[gd_scene load_steps=3 format=3 uid="uid://dtyirierf8lui"]

[ext_resource type="Script" path="res://scripts/audio_slider_settings.gd" id="1_4fdmj"]
[ext_resource type="Theme" uid="uid://cuapcy8mkua4w" path="res://scenes/seasons_hud.tres" id="1_tsqdq"]

[node name="AudioSliderSettings" type="Control"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 3
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -20.0
offset_right = 40.0
offset_bottom = 20.0
grow_vertical = 2
script = ExtResource("1_4fdmj")
bus_name = "Master"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -20.0
offset_right = 688.0
offset_bottom = 20.0
grow_vertical = 2
theme_override_constants/separation = 20

[node name="AudioName" type="Label" parent="HBoxContainer"]
custom_minimum_size = Vector2(275, 0)
layout_mode = 2
theme = ExtResource("1_tsqdq")
theme_override_font_sizes/font_size = 32
text = "Master Volume"

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2

[node name="HSlider" type="HSlider" parent="HBoxContainer"]
custom_minimum_size = Vector2(150, 32)
layout_mode = 2
size_flags_vertical = 1
theme = ExtResource("1_tsqdq")
max_value = 1.0
step = 0.001

[node name="VSeparator2" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2

[node name="AudioValue" type="Label" parent="HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme = ExtResource("1_tsqdq")
theme_override_font_sizes/font_size = 32
text = "71.0"

[connection signal="value_changed" from="HBoxContainer/HSlider" to="." method="_on_h_slider_value_changed"]
